--- a/StripeDisconnect/Info.plist
+++ b/StripeDisconnect/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>I need Bluetooth.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>I need your location.</string>
 	<key>UIBackgroundModes</key>
